--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,14 @@
 		  </a>
 		</li>
 		
+		<li class="table-view-cell media">
+			<a hre="#" class="push-right add-location-btn">
+				<span class="media-object pull-left"></span>
+				<div class="media-body">
+					Add location
+				</div>
+			</a>
+		</li>
 		
         <script type="text/javascript" src="js/index.js"></script>
     </body>
